# earthbeben_project

./: README.md  all_earthquakes_page.py  app.py  erdbebenanalyse.py  expl_page.py  fetch_data.py  main.py  ml_model.py  pyproject.toml  requirements.txt  strongest_earthquakes_page.py
static/: format.css  karte.html
templates/: datenschutz.html  disclaimer.html  impressum.html  index.html  index1.html  index2.html  karte.html  quellen.html
