[tool.poetry]
name = "earthquake-streamlit-app"
version = "0.1.0"
description = "Refactored Earthquake Applikation for visualisation and prediction with ML"
authors = ["Hoang Vu Tuyen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
streamlit = "^1.34.0"
requests = "^2.32.0"
pandas = "^2.2.2"
geopandas = "^0.14.4"
scikit-learn = "^1.4.2"
pydeck = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
